--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -696,52 +696,98 @@ For `SortDeadlineCommand`, the list will be sorted in the order that nearest dea
 === Inventory Tab
 
 This tab will help to keep records of all items currently in the club’s possession.
-Each item will require an input of its description, category, quantity, and cost per unit. Optionally, if the item is meant for
-sale, the price can be inputted as well.
-
-This is the overall Class Diagram of this tab:
-
-.Class Diagram of Inventory Tab (inventory package)
-
-image::InventoryTabClassDiagram.png[]
+Each item will require an input of its description, category, quantity, and cost per unit. Optionally, if the item is
+meant for sale, the price can be inputted as well.
 
 ==== Add Item Feature
-This features allows the adding of items to the inventory.
+This section explains the implementation of the add command feature of the Inventory Tab,
+which allows the addition of items to the inventory. These items are represented by `Item` objects.
+The addition of an `Item` to the inventory requires an input of the `Item`’s description, category, quantity, and cost.
+The price field is optional and may be added only to an `Item` meant for sale.
 
-When adding a new item, the user is required to input the description, category, quantity and cost per unit of the item.
-The only attribute that is optional is the price.
+Due to the usage of `ArgumentMultimap`, the fields can be in any order as they are retrieved via the prefixes that
+precede them.
 
-For an input to be valid, it must contain all four of the previously mentioned attributes, and the input for each attribute
-must be of the correct type. For example, quantity and cost must be numbers. However, the attributes can be inputted in any
-order.
+The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+`AddCommand` works:
 
-The following sequence diagram shows how an add command works with the description, category, quantity, cost and price fields
-present:
+.Sequence Diagram of the Add Command in the Inventory Tab (inventory package)
+image::inventoryDG/AddCommandSeqDiagram.png[]
 
-.Sequence Diagram of Add Command in Inventory Tab (inventory package)
+If the description of the `Item` being added matches that of an existing `Item`, the new `Item`’s quantity is added to
+that of the existing `Item` and the cost per unit is recalculated. This is handled within the `AddCommandParser`,
+which also checks the validity of the input.
 
-_{ to be added }_
+It prohibits the addition of an `Item` with any value equivalent to or greater than 10,000. This includes the total cost
+and expected revenue of each `Item`. It also prohibits non-numeric inputs where numeric inputs are expected.
+This is conducted through the isValidNumericString(string) method which performs the aforementioned checks and
+returns a `Boolean` that represents the validity of the input.
 
-The following activity diagram displays the process of adding a new item to the inventory:
+The following Sequence Diagram shows how the `AddCommandParser` creates an `Item`:
 
-.Activity Diagram of Add Command in Inventory Tab (inventory package)
+.Sequence Diagram of the Add Command Parser in the Inventory Tab (inventory package)
+image::inventoryDG/AddCommandParserSeqDiagram.png[]
 
-image::InventoryAddCommandActivityDiagram.png[]
+After the `Item` is created and the command is executed, the `LogicManager` updates the in-app `InventoryList` via the
+`ModelManager` and updates the data file via the `StorageManager`.
 
-As shown above, the input will be evaluated for its validity. If the input is not valid, the user will be informed through Leo
-that the command was in an invalid format and reminded of the correct format.
+For a greater understanding of the flow of events and checks, you may consult the following activity diagram that shows
+the steps that follow the input of an add command:
 
-Otherwise, the user will be informed through Leo that their input was successful, and the item will immediately be displayed in
-the Table of the UI.
+.Activity Diagram of the Add Command in the Inventory Tab (inventory package)
+image::inventoryDG/AddCommandFlowChart.png[]
 
 ==== Delete Item Feature
 
+This section explains the implementation of the delete command feature of the Inventory Tab, which allows the deletion
+of items from the inventory. This feature requires only the command keyword and an index or description as input.
+
+The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+`DeleteCommand` works:
+
+.Sequence Diagram of the Delete Command in the Inventory Tab (inventory package)
+image::inventoryDG/DeleteCommandSeqDiagram.png[]
+
+The `DeleteCommandParser` is responsible for checking the validity of the input, and does not allow any indexes that
+are less than 1 or greater than the largest index currently in the list. It can also take in a description as input and
+compares it against existing `Item` s in the `InventoryList`. This comparison is case-insensitive.
+
 ==== Edit Item Feature
+
+This section explains the implementation of the edit command feature of the Inventory Tab, which allows you to edit
+items in the inventory. This feature requires the command keyword, an index and at least one field as input.
+
+The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+`EditCommand` works:
+
+.Sequence Diagram of the Edit Command in the Inventory Tab (inventory package)
+image::inventoryDG/EditCommandSeqDiagram.png[]
 
 ==== Sort Items Feature
 
-==== [Proposed] Auto-Complete Feature
+This section explains the implementation of the sort command feature of the Inventory Tab, which allows the sorting
+of items within the inventory. There are 3 ways items can be sorted - by description, category or quantity.
 
+The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows how the
+`SortCommand` works:
+
+.Sequence Diagram of the Sort Command in the Inventory Tab (inventory package)
+image::inventoryDG/SortCommandSeqDiagram.png[]
+
+==== Overall Design Considerations
+
+This section explains the design considerations for some crucial implementations in the Inventory Tab.
+
+|===
+|Alternative 1 |Alternative 2 |Conclusion and Explanation
+
+|
+
+*Pros*:
+
+*Cons*:
+
+|===
 
 === Cashier Tab
 This tab will act as a shopping cart to add and record sales items that are to be sold from the inventory.
