--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -412,15 +412,15 @@ After filtering specific bodies, you may now want to view the full list of bodie
 
 * 1. Mortago shows filtered list of bodies.
 
-image::list1.png[]
+image::List1.png[]
 
 * 2. Type `list -b` in the Command Line Interface (CLI).
 
-image::list2.png[]
+image::List2.png[]
 
 * 3. Mortago shows unfiltered list of bodies.
 
-image::list3.png[]
+image::List3.png[]
 
 // end::list[]
 
