Added and updated test cases and Updated UG DG (#201)
* Modified the Meeting feature to follow the member's and task's format

* Merge remote-tracking branch 'upstream/master'

# Conflicts:
#	src/main/java/seedu/address/logic/commands/AddProjectCommand.java
#	src/main/java/seedu/address/logic/commands/AddProjectMeetingCommand.java

* Fixed Meetings Display in Project Overview

* Corrected Validation Regex for date and time

* Implemented sendReminder Command for Mailing

* Corrected JsonAdaptedMeeting

* Improving code readability and added MeetingClassDiagram and ProjectMeeting.png

* no message

* Added sequence diagram for SendReminderCommand

* Added SequenceDiagram and ActivityDiagram for SendReminder

* checkstyle for SendreminderActivityDiagram.puml

* Fixed bugs for sendReminder command

* Corrected SendReminderSequenceDiagram and sendreminderActivityDiagram

* Improve error message LOL

* Travis try pass

* Update DeveloperGuide.adoc (#2)

* philipalexanderb PPP

* Updated userguide and developerguide

* MeetingClassDiagram change

* Update documentation

* Documentation and error handlding for sendMail upgrade

* Documentation update

* Added Test classes adn updated documentation

* Amended test classes

* Travis passing addProjectCommandTest class

* Remove one test cases from addProjectMeetingCommandTest java

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -371,15 +371,8 @@ The diagram above shows how `broadcastMail` works.
 
 ===== Aspect: Data structure to support the broadcastMail commands
 
-* **Alternative 1:** Storing List<Person> in the Project for members.
-** Pros: Easy to implement. Do not need to look for the person object in the addressBook from the List of String of
-members' names in the project.
-** Cons: Introduces coupling and may cause unwanted bugs due to cyclic dependencies as Project contains Person and
-Person contains Project.
-* **Alternative 2:** Stores members as List<String> of members names.
-** Pros: Reduces coupling and and eliminates cyclic dependencies between Project and Person object.
-** Cons: Have to hash the members object in the addressBook by names and go through the List<String> of members'
-names one by one to get the Person object of the member. Harder to implement.
+The alternatives are similar to sendReminder as the underlying problem lies in sending email
+to all the members in the project group.
 // end::broadcastMail[]
 
 // tag::signIn[]
